--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -6,10 +6,16 @@
     <title>{{title}}</title>
 
     <link href="../assets/stylesheets/asciidoc.css"/>
+    <link href="../assets/javascripts/asciidoc.js"/>
 </head>
 
-<body>
-{{content}}
+<body class="article">
+<div id="header">
+</div>
+
+<div id="content">
+    {{content}}
+</div>
 
 </body>
 </html>
